# fpc-playground

./: LICENSE  README.md  haskell-fpc.cabal
src/fpc/: Ast.hs  Eval.hs  Statics.hs
