name:                haskell-fpc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CT075/haskell-fpc#readme
license:             BSD3
license-file:        LICENSE
author:              Cameron Wong
maintainer:          cam@camdar.io
copyright:           2019 Cameron Wong
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-fpc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
